# claude-status

./: Cargo.toml  README.md  statusline.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: diff_against_bash.sh
