[package]
name = "claude-status"
version = "0.1.0"
edition = "2021"
description = "Claude Code status line renderer"

[[bin]]
name = "claude-status"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
